--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URL=mongodb+srv://rizwan:killerdb@cluster0.xlfblur.mongodb.net/?retryWrites=true&w=majority
-
+GITHUB_SECRET=bdeece85714869728fb7a744fef3abe71629f636
+GITHUB_CLIENT_ID=88da0cb4bb8c367f0417
